# ChangeLog for dev-util/debhelper
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/ChangeLog,v 1.72 2013/05/26 15:50:37 jer Exp $

*debhelper-9.20130518 (26 May 2013)

  26 May 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20130518.ebuild:
  Version bump.

*debhelper-9.20130516 (17 May 2013)

  17 May 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20130516.ebuild:
  Version bump.

*debhelper-9.20130509 (10 May 2013)

  10 May 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20130509.ebuild:
  Version bump.

*debhelper-9.20130507 (08 May 2013)

  08 May 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20130507.ebuild:
  Version bump.

  05 May 2013; Jeroen Roovers <jer@gentoo.org> debhelper-9.20130504.ebuild:
  Remove IUSE=nls as it is a duplicate of each lingua.

*debhelper-9.20130504 (05 May 2013)

  05 May 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20130504.ebuild,
  -debhelper-9.20120322.ebuild, -debhelper-9.20120608.ebuild,
  -debhelper-9.20120830.ebuild, files/debhelper-7.4.13-conditional-nls.patch:
  Clean up patch. Version bump.

  14 Oct 2012; Raúl Porcel <armin76@gentoo.org> debhelper-9.20120909.ebuild:
  alpha/ia64/m68k/s390/sh/sparc/x86 stable wrt #437784

  12 Oct 2012; Agostino Sarubbo <ago@gentoo.org> debhelper-9.20120909.ebuild:
  Stable for amd64, wrt bug #437784

  11 Oct 2012; Jeroen Roovers <jer@gentoo.org> debhelper-9.20120909.ebuild:
  Stable for HPPA (bug #437784).

  10 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
  debhelper-9.20120909.ebuild:
  stable ppc ppc64, bug #437784

  10 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
  debhelper-9.20120909.ebuild:
  stable arm, bug #437784

  27 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
  debhelper-9.20120909.ebuild:
  keyword ~ppc64 for app-arch/alien

*debhelper-9.20120909 (11 Sep 2012)

  11 Sep 2012; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20120909.ebuild:
  Version bump.
