@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/debhelper
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/ChangeLog,v 1.72 2013/05/26 15:50:37 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/ChangeLog,v 1.73 2013/06/04 23:37:58 jer Exp $
+
+*debhelper-9.20130604 (04 Jun 2013)
+
+  04 Jun 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20130604.ebuild:
+  Version bump.
 
 *debhelper-9.20130518 (26 May 2013)
 
